# sqlmiddleware

./: pyproject.toml  requirements.txt
.github/workflows/: release.yml
sql-package/: README.rst  pyproject.toml
sqlmiddleware/: asgi.py  settings.py  urls.py  wsgi.py
sqlquery/: factory.py  models.py  views.py
sqlquery/migrations/: 0001_initial.py
tests/: settings.py
tests/demo_app/: urls.py  views.py
